<resources>
    <string name="app_name">ForumIAS</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email ID/Phone</string>
    <string name="login">Login</string>
    <string name="otp_login">OR Log in using OTP</string>
    <string name="password_login">Login Using Password</string>
    <string name="link_login">Login Using Magic Link</string>
    <string name="register">Register</string>
    <string name="fotgot_password">Forgot Password?</string>
    <string name="email">Email</string>
    <string name="display_name">Display Name (This is shown when you comment)</string>
    <string name="hint_mobile">Mobile Number</string>
    <string name="full_name">Full Name (This is private, visible only to you)</string>
    <string name="accept">Accept</string>
    <string name="condition">Terms and Agreements</string>
    <string name="fotgot">Forgot Password</string>
    <string name="required_field">Required Field</string>
    <string name="required_fieldemail">Required Field and Valid Email</string>
    <string name="chat">Chat</string>
    <string name="gallery">Gallery</string>
    <string name="close">Close</string>
    <string name="submit">Submit</string>
    <string name="mobile_input">Mobile number minimum 10 digit.</string>
    <string name="input_all_number">Input all OPT number required.</string>
    <string name="new_groups">New Group</string>
    <string name="new_chanel">New Chanel</string>
    <string name="create_group">Create New Group</string>
    <string name="create_new_chanel">Create new chanel</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="post">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="signin">Sign In</string>
    <string name="search">Search....</string>
    <string name="gyan">Share Gyan</string>
    <string name="gyan_hint">Write an article and share  your knowledge or something you have learned recently.</string>
    <string name="ask">Ask</string>
    <string name="ask_hint">Start a discussion, ask a question, or  as for a opinion</string>
    <string name="read_more">Read more..</string>
    <string name="question">Question</string>
    <string name="discussion">Discussion</string>
    <string name="follow_user">Follow Users</string>
    <string name="ask_ques_title">Enter title of your question here.</string>
    <string name="ask_submit">Ask</string>
    <string name="reject">Reject</string>
    <string name="admin">Adamin</string>
    <string name="remove">Remove</string>
    <string name="recent_post">Recent Posts</string>
    <string name="nothing_show">There are nothing to show.</string>
    <string name="leave_group">Leave Group</string>
    <string name="all_pages">All Pages</string>
    <string name="open">Open</string>
    <string name="report">Report</string>
    <string name="followers">Followers</string>
    <string name="total_post">Total Posts</string>
    <string name="group_member">Group Members</string>
    <string name="follow">Follow</string>
    <string name="view">View...</string>
    <string name="hide">Hide...</string>
    <string name="community">Community</string>
    <string name="delete">Delete</string>
    <string name="markread">Mark as Read</string>
    <string name="addtag">Add tag</string>
    <string name="select_all">Select All</string>
    <string name="trash">Trash</string>
    <string name="dummy_test">This is dummy text. I need a text for this popup.</string>
    <string name="add">Add</string>
    <string name="send">Send</string>
    <string name="link">Share Link</string>
    <string name="share_link">Share the useful link</string>
    <string name="past_link">Past a link here</string>
    <string name="sharelink">Share Link</string>
    <string name="ask_question">Ask  a Question</string>
    <string name="start_discustion">Start a Discussion</string>
    <string name="link_share">Share Link</string>
    <string name="forumias_msg">ForumIAS Messenger</string>
    <string name="upload">Upload</string>
    <string name="publish">Publish</string>
    <string name="group_following">Groups Following</string>
    <string name="page_following">Pages Following</string>
    <string name="subscribed_channel">Subscribed Channel</string>
    <string name="verification">Verification...!</string>
    <string name="send_otp">Verification OTP...!</string>
    <string name="login_verification">Login verification...!</string>
    <string name="send_link">Send Link...!</string>
    <string name="text_otp">Send OTP</string>
    <string name="login_password">Login With Password</string>
    <string name="text_link">Send Magic Link</string>
    <string name="login_now">Login Now</string>
    <string name="message">Kindly log in or sign up to use this functionality.</string>
    <string name="login_post">Loading post...</string>
    <string name="friendinfo">Personalize your ForumIAS experience by following the users you care.</string>
    <string name="story_hint">Enter thi title of your story here.</string>
    <string name="question_title_hint">Enter Title of your Question here</string>
    <string name="file">File</string>
    <string name="camera">Camera</string>
    <string name="announcement">Announcement</string>
    <string name="login_info">Please Login then access All Comments</string>
    <string name="add_user">Add User</string>
    <string name="subscribe">Subscribe</string>
    <string name="subscribed">Subscribed</string>
    <string name="send_invite">Send Invite</string>
    <string name="send_invite_title">Invite people to Join your Channel</string>
    <string name="hint_title">Enter Emails( eg. user1@forumias.com, user2@forumias.com)</string>
    <string name="enter_email">Enter Email</string>
    <string name="create_post">Create Post</string>
    <string name="create_story">Create Story</string>
    <string name="comment_on">Comment on post</string>
    <string name="verifid_otp">Verify and login</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="join_on">JOINED ON</string>
    <string name="sign_up">Sign up</string>
    <string name="update">Update</string>
    <string name="logout">Log out</string>
    <string name="comment_message">Oops, Nothing to see here. Please start commenting.</string>

</resources>
