<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rlLoginInfo"
    android:visibility="visible">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLoginInfo"
            android:layout_width="@dimen/dp100"
            android:layout_height="@dimen/dp100"
            android:layout_gravity="center"
            android:src="@drawable/login_info"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/dp10"
            android:fontFamily="@font/proximanova_bold"
            android:textColor="@color/black"
            android:text="@string/message"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/dp15"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLogin"
                android:layout_width="@dimen/dp100"
                android:layout_height="@dimen/dp35"
                android:gravity="center"
                android:background="@drawable/followrs_shae"
                android:textColor="@color/white"
                android:layout_marginRight="@dimen/dp10"
                android:fontFamily="@font/proximanova_bold"
                android:text="@string/login"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSignUp"
                android:layout_width="@dimen/dp100"
                android:layout_height="@dimen/dp35"
                android:gravity="center"
                android:background="@drawable/followrs_shae"
                android:textColor="@color/white"
                android:layout_marginLeft="@dimen/dp10"
                android:fontFamily="@font/proximanova_bold"
                android:text="@string/sign_up"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>