<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llCreateSection"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:layout_marginLeft="@dimen/dp10"
    android:layout_marginTop="@dimen/dp60"
    android:layout_marginRight="@dimen/dp10"
    android:layout_marginBottom="@dimen/dp10"
    android:outlineSpotShadowColor="@color/colorPrimary"
    app:cardCornerRadius="@dimen/dp10"
    app:cardElevation="@dimen/dp6">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/post_border"
        android:orientation="vertical"
        android:paddingTop="@dimen/dp10">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llShareGyanSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/dp45"
                    android:layout_height="@dimen/dp45"
                    android:layout_marginLeft="@dimen/dp10"
                    android:src="@drawable/ic_gyan" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp10"
                    android:fontFamily="@font/proximanova_bold"
                    android:gravity="center_vertical"
                    android:text="@string/gyan"
                    android:textColor="@color/gray_dark"
                    android:textSize="18sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proximanova_regular"
                android:padding="@dimen/dp15"
                android:text="@string/gyan_hint"
                android:textColor="@color/gray_dark" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_dark" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llAskQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:orientation="horizontal">


                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/dp45"
                    android:layout_height="@dimen/dp45"
                    android:layout_marginLeft="@dimen/dp10"
                    android:src="@drawable/ic_ask" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp10"
                    android:fontFamily="@font/proximanova_bold"
                    android:gravity="center_vertical"
                    android:text="@string/ask"
                    android:textColor="@color/gray_dark"
                    android:textSize="18sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>



            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proximanova_regular"
                android:padding="@dimen/dp15"
                android:text="@string/ask_hint"
                android:textColor="@color/gray_dark" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_dark" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llShareLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:orientation="horizontal">


                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/dp45"
                    android:layout_height="@dimen/dp45"
                    android:layout_marginLeft="@dimen/dp10"
                    android:src="@drawable/ic_link" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp10"
                    android:fontFamily="@font/proximanova_bold"
                    android:gravity="center_vertical"
                    android:text="@string/link"
                    android:textColor="@color/gray_dark"
                    android:textSize="18sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>



            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proximanova_regular"
                android:padding="@dimen/dp15"
                android:text="@string/share_link"
                android:textColor="@color/gray_dark" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</com.google.android.material.card.MaterialCardView>