<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone"
    android:id="@+id/svAskQuestionSection">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proximanova_bold"
                android:textColor="@color/black"
                android:checked="true"
                android:layout_marginRight="@dimen/dp5"
                android:text="@string/ask_question"/>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proximanova_bold"
                android:textColor="@color/black"
                android:layout_marginLeft="@dimen/dp5"
                android:text="@string/start_discustion"/>
        </RadioGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp300"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginTop="@dimen/dp55"
            android:layout_marginRight="@dimen/dp10"
            android:background="@drawable/border_shape"
            android:elevation="@dimen/dp6"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proximanova_bold"
                android:gravity="top|left"
                android:hint="@string/ask_ques_title"
                android:lines="3"
                android:paddingLeft="@dimen/dp6"
                android:scrollbars="vertical"
                android:textColor="@color/gray_dark" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@android:color/transparent"
                android:fontFamily="@font/proximanova_regular"
                android:gravity="top|left"
                android:hint="Do's &amp; Don'ts#1 begin your question with What, Why, When, How, If, Can etc.#2 Do not ask Coaching Reviews. This is not a coaching Review Website. Please do not ask or post Coaching Review. #3 Do not promote your website or blog Post. Anything promotion "
                android:lines="9"
                android:minLines="9"
                android:paddingLeft="@dimen/dp6"
                android:scrollbars="vertical" />
        </RelativeLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_marginTop="@dimen/dp35"
            android:layout_marginRight="@dimen/dp15"
            android:layout_marginBottom="@dimen/dp100"
            android:background="@drawable/button_shape"
            android:fontFamily="@font/proximanova_regular"
            android:gravity="center"
            android:text="@string/ask_submit"
            android:textColor="@color/white"
            android:textSize="@dimen/sp17" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>