<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone"
    android:id="@+id/svShareLinkSection">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp200"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginTop="@dimen/dp55"
            android:layout_marginRight="@dimen/dp10"
            android:background="@drawable/border_shape"
            android:elevation="@dimen/dp6"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp50"
                android:fontFamily="@font/proximanova_bold"
                android:gravity="center_vertical"
                android:text="@string/link_share"
                android:paddingLeft="@dimen/dp6"
                android:scrollbars="vertical"
                android:textColor="@color/gray_dark" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/dp55"
                android:background="@color/gray"/>
            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@android:color/transparent"
                android:fontFamily="@font/proximanova_regular"
                android:gravity="top|left"
                android:lines="5"
                android:hint="@string/past_link"
                android:minLines="5"
                android:paddingLeft="@dimen/dp6"
                android:scrollbars="vertical" />
        </RelativeLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_marginTop="@dimen/dp35"
            android:layout_marginRight="@dimen/dp15"
            android:layout_marginBottom="@dimen/dp100"
            android:background="@drawable/button_shape"
            android:fontFamily="@font/proximanova_regular"
            android:gravity="center"
            android:text="@string/sharelink"
            android:textColor="@color/white"
            android:textSize="@dimen/sp17" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>