<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/back_color"
    android:id="@+id/llCreatePostSection"
    tools:context="com.forumias.beta.ui.deta.forumias.create_story.CreatePostFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llCreateGyan"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp100"
            android:layout_marginTop="@dimen/dp10"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dp20"
            android:paddingRight="@dimen/dp20">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivGyanImage"
                android:layout_width="@dimen/dp40"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp2"
                android:src="@drawable/gyan_black" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dp10">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvShareGyan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoe_bold"
                    android:paddingBottom="@dimen/dp5"
                    android:text="Share Gyan"
                    android:textColor="@color/black_light"
                    android:textSize="@dimen/sp18" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoe_regular"
                    android:text="@string/gyan_hint"
                    android:textColor="@color/gray_dark"
                    android:textSize="@dimen/sp12" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llCreateAskSomeThing"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp100"
            android:layout_marginTop="@dimen/dp10"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dp20"
            android:paddingRight="@dimen/dp20">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivAskImage"
                android:layout_width="@dimen/dp40"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp2"
                android:src="@drawable/ask_black" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dp10">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvAsk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoe_bold"
                    android:paddingBottom="@dimen/dp5"
                    android:text="Ask Something"
                    android:textColor="@color/black_light"
                    android:textSize="@dimen/sp18" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoe_regular"
                    android:text="@string/ask_hint"
                    android:textColor="@color/gray_dark"
                    android:textSize="@dimen/sp12" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llShareLink"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp100"
            android:layout_marginTop="@dimen/dp10"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dp20"
            android:paddingRight="@dimen/dp20">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivLinkImage"
                android:layout_width="@dimen/dp40"
                android:layout_height="match_parent"
                android:padding="@dimen/dp2"
                android:src="@drawable/link_black" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dp10">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoe_bold"
                    android:paddingBottom="@dimen/dp5"
                    android:text="Share Link"
                    android:textColor="@color/black_light"
                    android:textSize="@dimen/sp18" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoe_regular"
                    android:text="@string/share_link"
                    android:textColor="@color/gray_dark"
                    android:textSize="@dimen/sp12" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>